# mantos-api

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/product/: apps.py  endpoints.py  models.py  serializers.py  views.py
backend/product/migrations/: 0001_initial.py
